# unbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp  vendor.hpp
src/core/: dumper.cpp  dumper.hpp
src/helper/: memory.cpp  memory.hpp  singleton.hpp
